# a_extra

./: .gitignore  README.md  pyproject.toml
results/: batch_fitting_results.csv  beta_test_results.csv  lense_thirring_analysis.csv
src/: LT_Analysis.py  v1_more_galaxies.py  v1_readingplot.py
